# mcp-monday

./: .env.example  .gitignore  1.3.0rc1  README.md  monday_client.py  monday_column_handlers.py  monday_column_handlers_advanced.py  monday_column_handlers_basic.py  monday_config.py  monday_resources.py  monday_server.py  monday_tools.py  monday_types.py  monday_validators.py  pyproject.toml  requirements.txt
src/mcp_monday/: __init__.py  config.py  resources.py  server.py  tools.py
